refactor: 지원서에 일정이 포함되어 동작하도록 기능 변경